--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-plotly
-streamlit
-seaborn
-pandas
-numpy
-matplotlib 
-pydeck
-altair
+matplotlib==3.1.1
+streamlit==0.52.2
+numpy==1.17.2
+plotly==4.5.2
+seaborn==0.9.0
+tqdm==4.48.2
+pandas==0.25.1
+statsmodels==0.10.1
+scikit_learn==0.23.2
