--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ install:
   - pip install -r requirements.txt
 ######################################################
 
-script: python3 process-sleep-data.py
+script: python process-sleep-data.py
